--- a/exercises/1.2/Exercise1.2_b1_cning0506.RMD
+++ b/exercises/1.2/Exercise1.2_b1_cning0506.RMD
@@ -20,6 +20,7 @@ data("ss08")
 
 plot.ts(ss08)
 plotts.wge(ss08)
+ss.data <- plotts.sample.wge(ss08)
 ```
 
 ## Question 2 - Calculate the average of TS realization 
