--- a/labs/lab1/msmccormack_lab1.ipynb
+++ b/labs/lab1/msmccormack_lab1.ipynb
@@ -95,7 +95,7 @@
         "library('tidyverse')\r\n",
         "library('tswge')\r\n"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -154,7 +154,7 @@
         "oni_df <- read.table(oni_file, header = TRUE)\r\n",
         "oni_ts <- ts(oni_df$ANOM, start = c(1950, 1), frequency = 12)"
       ],
-      "execution_count": 124,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +213,7 @@
         "mei_ts <- ts(as.vector(t(mei_df[,2:length(my_cols)])), start = c(1950, 1), frequency = 12)\r\n",
         "#plot(mei_ts, main = \"Two-month running average MEI\")\r\n"
       ],
-      "execution_count": 125,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -328,7 +328,7 @@
         "\r\n",
         "pad_ts <- ts(pad_df_final$PAD_1000, start = c(1964), frequency = 1)"
       ],
-      "execution_count": 126,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -387,7 +387,7 @@
         "\r\n",
         "elninoyr_df <- data.frame(years[1:71], elninoyr)"
       ],
-      "execution_count": 127,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -445,7 +445,7 @@
         "gdp_df_final <- data.frame(years_vec, gdp_vec)\r\n",
         "gdp_df_final <- drop_na(gdp_df_final)"
       ],
-      "execution_count": 128,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -514,7 +514,7 @@
         "abline(h=.5, type='dashed', lty=2)\r\n",
         "abline(h=-.5, type='dashed', lty=2)"
       ],
-      "execution_count": 129,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -582,7 +582,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5, cex.sub = 1.5)\r\n",
         "plot(oni_ts, main = \"ONI Realization\", xlab='Time', ylab='Anomaly')"
       ],
-      "execution_count": 130,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -626,7 +626,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "acf(oni_ts, main='ONI Autocorrelations', lag.max=80)"
       ],
-      "execution_count": 131,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -670,7 +670,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "oni_period <- period.wge(oni_ts)"
       ],
-      "execution_count": 132,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -714,7 +714,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "oni_par <- parzen.wge(oni_ts)"
       ],
-      "execution_count": 133,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -755,7 +755,7 @@
       "source": [
         "cat(\"Period of ONI: \", 1/oni_period$freq[which.max(oni_period$pgram)])"
       ],
-      "execution_count": 134,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -787,7 +787,7 @@
       "source": [
         "cat(\"Dominant Frequency of ONI: \", oni_period$freq[which.max(oni_period$pgram)])"
       ],
-      "execution_count": 135,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -832,7 +832,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5, cex.sub = 1.5)\r\n",
         "plot(mei_ts, main = \"MEI Realization\", xlab='Time', ylab='Anomaly')"
       ],
-      "execution_count": 136,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -876,7 +876,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "acf(mei_ts, main='MEI Autocorrelations', lag.max=80)"
       ],
-      "execution_count": 137,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -920,7 +920,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "mei_period <- period.wge(mei_ts)"
       ],
-      "execution_count": 138,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -964,7 +964,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "mei_par <- parzen.wge(mei_ts)"
       ],
-      "execution_count": 139,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1012,7 +1012,7 @@
         "cat(\"Period of MEI: \", 1/frequency_1, '\\n')\r\n",
         "cat(\"Second period of MEI: \", 1/frequency_2)"
       ],
-      "execution_count": 140,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1046,7 +1046,7 @@
         "cat(\"Dominant Frequency of MEI: \", frequency_1, '\\n')\r\n",
         "cat(\"Second dominant Frequency of MEI: \", frequency_2)"
       ],
-      "execution_count": 142,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1092,7 +1092,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5, cex.sub = 1.5)\r\n",
         "plot(pad_ts, main = \"PAD Realization\", xlab='Time', ylab='PAD (Per 1000)')"
       ],
-      "execution_count": 143,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1136,7 +1136,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "acf(pad_ts, main='PAD Autocorrelations', lag.max=80)"
       ],
-      "execution_count": 144,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1180,7 +1180,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "pad_period <- period.wge(pad_ts)"
       ],
-      "execution_count": 146,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1224,7 +1224,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "pad_par <- parzen.wge(pad_ts)"
       ],
-      "execution_count": 147,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1272,7 +1272,7 @@
         "cat(\"Period of PAD: \", 1/frequency_1, '\\n')\r\n",
         "cat(\"Second period of PAD: \", 1/frequency_2)"
       ],
-      "execution_count": 148,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1306,7 +1306,7 @@
         "cat(\"Dominant Frequency of PAD: \", frequency_1, '\\n')\r\n",
         "cat(\"Second dominant Frequency of PAD: \", frequency_2)"
       ],
-      "execution_count": 149,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1350,7 +1350,7 @@
         "ninoyr_ts <- ts(elninoyr_df$elninoyr, start = c(1950, 1), frequency = 1)\r\n",
         "plot(ninoyr_ts, main = \"El Niño Year Occurrences\", xlab='Time', ylab='El Niño Year')"
       ],
-      "execution_count": 150,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1394,7 +1394,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "acf(ninoyr_ts, main='El Niño Years Autocorrelations', lag.max=80)"
       ],
-      "execution_count": 151,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1438,7 +1438,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "ninoyr_period <- period.wge(ninoyr_ts)"
       ],
-      "execution_count": 152,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1482,7 +1482,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "ninoyr_par <- parzen.wge(ninoyr_ts)"
       ],
-      "execution_count": 153,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1530,7 +1530,7 @@
         "cat(\"Period of El Niño Years: \", 1/frequency_1, '\\n')\r\n",
         "cat(\"Second period of El Niño Years: \", 1/frequency_2)"
       ],
-      "execution_count": 154,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1564,7 +1564,7 @@
         "cat(\"Dominant Frequency of El Niño Years: \", frequency_1, '\\n')\r\n",
         "cat(\"Second dominant Frequency of El Niño Years: \", frequency_2)"
       ],
-      "execution_count": 155,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1612,7 +1612,7 @@
         "gdp_ts <- ts(gdp_df_final$gdp_vec, start = c(1960), frequency = 1)\r\n",
         "plot(gdp_ts, main = \"GDP Realization\", type='l', ylab = 'GDP growth (Annual %)')"
       ],
-      "execution_count": 156,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1656,7 +1656,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "acf(gdp_ts, main='GDP Autocorrelations', lag.max=80)"
       ],
-      "execution_count": 157,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1700,7 +1700,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "gdp_period <- period.wge(gdp_ts)"
       ],
-      "execution_count": 158,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1744,7 +1744,7 @@
         "par(cex.main =  1.5, cex.lab = 1.5)\r\n",
         "gdp_par <- parzen.wge(gdp_ts)"
       ],
-      "execution_count": 159,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1792,7 +1792,7 @@
         "cat(\"Period of GDP: \", 1/frequency_1, '\\n')\r\n",
         "cat(\"Second period of GDP: \", 1/frequency_2)"
       ],
-      "execution_count": 160,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1826,7 +1826,7 @@
         "cat(\"Dominant Frequency of GDP: \", frequency_1, '\\n')\r\n",
         "cat(\"Dominant Frequency of GDP: \", frequency_2)"
       ],
-      "execution_count": 161,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1856,7 +1856,8 @@
         "#### What did I do, and how did the tools work?\r\n",
         "Throughout the methods portion of this lab, we pre-processed 5 different data sets for analysis. The data we used that were from the Lam et al. paper included the Oceanic Niño Index (ONI) data, the Multi-variate ENSO Index (MEI) data, and the International Disasters Database (EMDAT) data on persons affected by disasters. The data sets we used that were not in the paper were the worldbank population data and worldbank GDP data. I used the ONI, MEI, EMDAT, and worldbank population data to recreate figure 1 from the Lam et al. paper, which is shown in the \"Figure 1 replication from Lam et al.\" section of the results. The amount of effort put into pre-processing these data sets varied greatly; some, like the ONI data, took only a few lines of code. However, the worldbank data took a lot more code and R knowledge to format it properly for our needs as time series. \r\n",
         "\r\n",
-        "After formatting the data, we visualized our results using realization plots, autocorrelation plots, periodograms, and parzen windows. We used these to investigate general trends, periodic and aperiodic behavior, and the dominant frequency of each time series. These tools allow us to better understand the behavior of our data with respect to time. The realization plots visualize the time series data for us, which is generally useful to identify possible patterns. The sample autocorrelation, which is the natural estimator for the autocorrelation function, can be calculated as $\\hat ρ_h=\\hat γ_h/ \\hat γ_0$ and it gives us valuable insight on how the data could be correlated while taking into account different lag sizes (Woodward et al. (2017). Applied time series analysis with R, p. 20).Periodograms tell us more about the frequency of the data, and if there is any aperiodic/periodic behavior. Lastly, parzen windows serve as windowed spectral estimators (Woodward et al. (2017). Applied time series analysis with R, p. 35). We used the 'tswge' package to actually implement these figures in R. \r\n",
+        "After formatting the data, we visualized our results using realization plots, autocorrelation plots, periodograms, and parzen windows. We used these to investigate general trends, periodic and aperiodic behavior, and the dominant frequency of each time series. These tools allow us to better understand the behavior of our data with respect to time. The realization plots visualize the time series data for us, which is generally useful to identify possible patterns. The sample autocorrelation, which is the natural estimator for the autocorrelation function, can be\r\n",
+        "calculated as $\\hat \\rho_h = \\frac{\\hat \\gamma_h}{\\hat \\gamma_0}$ and it gives us valuable insight on how the data could be correlated while taking into account different lag sizes (Woodward et al. (2017). Applied time series analysis with R, p. 20).Periodograms tell us more about the frequency of the data, and if there is any aperiodic/periodic behavior. Lastly, parzen windows serve as windowed spectral estimators (Woodward et al. (2017). Applied time series analysis with R, p. 35). We used the 'tswge' package to actually implement these figures in R. \r\n",
         "\r\n"
       ]
     },
