--- a/labs/lab1/msmccormack_lab1.ipynb
+++ b/labs/lab1/msmccormack_lab1.ipynb
@@ -133,7 +133,7 @@
         "id": "b8xyJWahS63f"
       },
       "source": [
-        "### Load in/Format the ONI Data, and Plot the Time Series\r\n",
+        "### Load in/Format the ONI Data\r\n",
         "Tabularized Oceanic Niño Index (ONI) data from NOAA (Link: https://www.cpc.ncep.noaa.gov/data/indices/oni.ascii.txt )\r\n",
         "\r\n",
         "Code from: Davis, T. (2021). Applied Time Series Analysis - Code Snippet. Reading and processing data for Lab 1."
@@ -163,7 +163,7 @@
         "id": "9lERepe3TA5a"
       },
       "source": [
-        "### Load in/Format the MEI Data, and Plot the Time Series\r\n",
+        "### Load in/Format the MEI Data\r\n",
         "Multi-variate ENSO Index (MEI) data (Link: https://psl.noaa.gov/enso/mei.old/table.html )\r\n",
         "\r\n",
         "Code for this was from: Davis, T. (2021). Applied Time Series Analysis - Code Snippet. Reading and processing data for Lab 1."
@@ -222,7 +222,7 @@
         "id": "0LNekqIzTMc5"
       },
       "source": [
-        "### Load in/Format the PAD/Population Data, and Plot the Time Series\r\n",
+        "### Load in/Format the PAD/Population Data\r\n",
         "* Persons Affected by Disasters (PAD) data from EM DAT (Link: https://public.emdat.be/ )\r\n",
         "*Population Data from Worldbank (Link: http://api.worldbank.org/v2/en/indicator/SP.POP.TOTL?downloadformat=csv )\r\n",
         "\r\n",
