--- a/labs/lab1/jpdas18_lab1 (1).ipynb
+++ b/labs/lab1/jpdas18_lab1 (1).ipynb
@@ -134,8 +134,16 @@
         "id": "t0gY5D-8oMEp"
       },
       "source": [
-        "### Loading and Processing Data\r\n",
-        "##### In this section, I will import each of the datasets and process them appropriately for the purposes of this lab. My goal is to create time series objects for ONI, MEI, PAD rates, and LA rainfall to analyze in my investigation of ENSO and its association with PAD rates and rainfall in LA."
+        "### Loading and Processing Data"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "YNl710wKarDK"
+      },
+      "source": [
+        "In this section, I will import each of the datasets and process them appropriately for the purposes of this lab. My goal is to create time series objects for ONI, MEI, PAD rates, and LA rainfall to analyze in my investigation of ENSO and its association with PAD rates and rainfall in LA."
       ]
     },
     {
@@ -144,8 +152,16 @@
         "id": "2BRx630ePM0J"
       },
       "source": [
-        "##### Oceanic Ni&ntilde;o Index (ONI)\r\n",
-        "###### Download the ONI data as a text file from NOAA and convert it to a dataframe. "
+        "##### Oceanic Ni&ntilde;o Index (ONI)\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "cy90EdD2anF7"
+      },
+      "source": [
+        "Download the ONI data as a text file from NOAA and convert it to a dataframe. "
       ]
     },
     {
@@ -1238,7 +1254,7 @@
         "rainfall.file <- \"https://raw.githubusercontent.com/jpdas18/hello-world/main/LA_rainfall.csv\"\r\n",
         "rainfall.df <- read.csv(rainfall.file, header=TRUE)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1258,7 +1274,7 @@
       "source": [
         "rainfall.ts <- ts(rainfall.df$Rainfall, start=c(1964,1), frequency=1)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1283,7 +1299,7 @@
       "source": [
         "plot(rainfall.ts, type = \"p\", xlab = \"Year\", ylab = \"Rainfall (in inches)\", main = \"LA Rainfall 1964-2017\")"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1309,8 +1325,16 @@
         "id": "StrJVB3JJnD0"
       },
       "source": [
-        "# Results\r\n",
-        "##### Now that I have processed my data into time series, I will investigate it using some of the tools I learned in class (periodogram and sample autocorrelation function). "
+        "# Results"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZLp_0jIma4AK"
+      },
+      "source": [
+        "Now that I have processed my data into time series, I will investigate it using some of the tools I learned in class (periodogram and sample autocorrelation function). "
       ]
     },
     {
@@ -2625,13 +2649,13 @@
         "id": "XK_tUPNJZjgF"
       },
       "source": [
-        "The dominant frequencies for the dataset containing all ONI values are .023 and .015, which correspond to periods of 43.2 months (3.6 years) and 64.8 months (5.4 years) respectively. This shows that the ONI data is indeed periodic. The autocorrelation function does not show that their is a particular lag with a major correlation.\r\n",
+        "The dominant frequencies for the dataset containing all ONI values are .023 and .015, which correspond to periods of 43.2 months (3.6 years) and 64.8 months (5.4 years) respectively. The autocorrelation function exhibits a dampening oscillation between positive and negative values. It looks a bit sinusoidal but not entirely. There appears to be some positive correlation at small lags and at lags around 40. \r\n",
         "\r\n",
-        "The ONI data for El Nino years demonstrates dominant frequencies of about .278 and .185, corresponding to periods of 3.6 years and 5.4 years. This means that El Nino events have a trend of occurring every 3.6 and 5.4 years. There are positive correlations at lags of around 5, 9, 15, 18, 28, 33, 35, 38, 43, 45, 48, and 51, which is consistent with periods of 3.6 and 5.4 years. \r\n",
+        "The ONI data for El Nino years demonstrates dominant frequencies of about .278 and .185, corresponding to periods of 3.6 years and 5.4 years. This means that El Nino events have a trend of occurring every 3.6 and 5.4 years. The autocorrelation function exhibits an oscillation between positive and negative values but does not seem to dampen with time. There are positive correlations at lags of around 5, 9, 15, 18, 28, 33, 35, 38, 43, 45, 48, and 51, which is consistent with periods of about 3.6 and 5.4 years. This analysis reflects that ENSO appears pseudo-periodic with periods of around 3-5 years.\r\n",
         "\r\n",
-        "The ONI data in which all values are set to zero except those indicating El Nino events with strong and very strong intensity has clear dominant frequencies as shown by the Parzen Window. These dominant frequencies are .333 and .111, corresponding to periods of 3 and 9 years. \r\n",
+        "The ONI data in which all values are set to zero except those indicating El Nino events with strong and very strong intensity has two clear dominant frequencies as shown by the Parzen Window and a potential third dominant frequencies. The two apparent dominant frequencies are .333 and .111, corresponding to periods of 3 and 9 years. The autocorrelations oscillate between positive and negative but do not seem to dampen with time. There are positive correlations at lags of around 7, 10, 13, 16, 18, 19, 24, 26, 28, 34, 37, and 42. It appears that El Nino events with very strong and strong intensities also exhibit pseudoperiodic behavior with periods of around 3 and 9 years.\r\n",
         "\r\n",
-        "The ONI data in which all values are set to zero except those indicating El Nino events with weak and moderate intensity has also has clear dominant frequencies as shown by the Parzen Window. These dominant frequencies are .389, .1296, and .111, corresponding to perios of 2.6 years, 7.7 years, and 9 years respectively."
+        "The ONI data in which all values are set to zero except those indicating El Nino events with weak and moderate intensity has also has three clear dominant frequencies as shown by the Parzen Window. These dominant frequencies are .389, .1296, and .111, corresponding to perios of 2.6 years, 7.7 years, and 9 years respectively. The autocorrelations oscillate between positive and negative values but also do not dampen over time. There are positive correlations at lags of around 7, 8, 11, 17, 24, 26, 34, 37, 39, 42, 44, and 46."
       ]
     },
     {
@@ -2649,9 +2673,13 @@
         "id": "twCimcxKZavi"
       },
       "source": [
-        "The dominant frequencies for the dataset containing all MEI values are .023 and .015, which correspond to periods of 43.2 months (3.6 years) and 64.8 months (5.4 years) respectively. It was strange that the dominant frequencies and periods of the MEI data were the exact same as those of the ONI data. I thought that perhaps I made a mistake in my code, but I could not find one.\r\n",
+        "The dominant frequencies for the dataset containing all MEI values are .023 and .015, which correspond to periods of 43.2 months (3.6 years) and 64.8 months (5.4 years) respectively. It was strange that the dominant frequencies and periods of the MEI data were the exact same as those of the ONI data, and the plots looked uncannily similar. I thought that perhaps I made a mistake in my code, but I could not find one. \r\n",
         "\r\n",
-        "Due to the similarity between ONI and MEI data, I curtailed my investigation into MEI data for El Ni&ntilde;o years and El Ni&ntilde;o intensity levels. I did discover that the dominant frequencies for MEI in El Ni&ntilde;o years equal .204 and .185, corresponding to periods of 4.91 years and 5.4 years respectively. This shows that, based on the MEI index, El Ni&ntilde;o events occur about once every five years. This is about what I expected for the frequency of El Ni&ntilde;o events."
+        "Due to the similarity between ONI and MEI data, I curtailed my investigation into MEI data for El Ni&ntilde;o intensity levels. \r\n",
+        "\r\n",
+        "The Parzen Window smoothing for MEI in El Ni&ntilde;o years indicates two dominant frequencies. I discovered that these dominant frequencies equal .204 and .185, corresponding to periods of 4.91 years and 5.4 years respectively. This shows that, based on the MEI index, El Ni&ntilde;o events occur about once every five years. This is about what I expected for the frequency of El Ni&ntilde;o events. The autocorrelation plot looks similar to that of the ONI for El Ni&ntilde;o years. It oscillates between positive and negative and does not dampen over time. There are clear correlations at lags of around 6, 9, 10, 15, 18, 24, 29, 34, 38, 43 and 50.\r\n",
+        "\r\n",
+        "The time series analyis of MEI data for the two intensity levels (strong and very strong; weak and moderate) was very similar to the that of the ONI data for the respective intensity level."
       ]
     },
     {
@@ -2669,7 +2697,7 @@
         "id": "3Lxq6bnyZLJ8"
       },
       "source": [
-        "There were three dominant frequencies for the PAD rate data: .463, .026, and .13. These correspond to periods of 2.16 years, 3.86 years, and 7.7 years. There were correlations at lags of about 7, 14, 21, 30, 37, and 43. However, it is unclear if this matches up with ENSO. The realization shows that there were five years where the PAD rate was much greater than the other years in the dataset. Given more time, I would like to see if these years correspond to El Ni&ntilde;o years, particularly those with strong or very strong intensity."
+        "The Parzen windows shows three strong peaks, so I found three dominant frequencies for the PAD rate data: .463, .026, and .13. These correspond to periods of 2.16 years, 3.86 years, and 7.7 years. There were correlations at lags of about 7, 14, 21, 30, 37, and 43. However, it is unclear if this matches up with ENSO. The realization shows that there were five years where the PAD rate was much greater than the other years in the dataset. Years with PAD rates greater than 100 people per 1000 are 1965, 1972, 1987, 2002. 1987 is the El Ni&ntilde;o year; however, the other years are \"sandwiched\" by El Ni&ntilde;o events, so perhaps there is some association. Nevertheless, based on the time series analysis I do not conclude that there is a clear correlation between El Ni&ntilde;o events and PAD rates. "
       ]
     },
     {
@@ -2726,7 +2754,7 @@
       },
       "source": [
         "My first major challenge was figuring out how to process the data. It was very helpful to have Professor Davis's help and code snippets to use to accomplish this. \r\n",
-        "My second major challenge was determining the association between ENSO and PAD and between ENSO and seasonal rainfall in LA. Although there are similar period lengths, there does not seem to be a clear correlation. "
+        "My second major challenge was determining the association between ENSO and PAD and between ENSO and seasonal rainfall in LA. Although there are similar period lengths, there does not seem to be a clear correlation. In general, it was a challenge to interpret the behavior of the time series because I feel relatively inexperienced at it. I hope that upon receiving feedback I can improve my analysis, interpretion, and skillset."
       ]
     },
     {
