--- a/labs/lab3/peterwoo_lab3.ipynb
+++ b/labs/lab3/peterwoo_lab3.ipynb
@@ -584,7 +584,7 @@
         "id": "9EgiQYDn-9Ny"
       },
       "source": [
-        "band <- butterworth.wge(mono, 3, type = \"pass\", cutoff = c(0.01,0.5), plot = FALSE)\n",
+        "band_pass <- butterworth.wge(mono, 3, type = \"pass\", cutoff = c(0.01,0.5), plot = FALSE)\n",
         "mad.filtered = Wave(band_pass$x.filt, samp.rate = 44100, bit = 16)\n",
         "play(mad.filtered)\n",
         "# Unsupported in Google Colab"
