--- a/project/thalliden_chords.ipynb
+++ b/project/thalliden_chords.ipynb
@@ -22,6 +22,20 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "VNVH62Oe1qAU"
+      },
+      "source": [
+        "#Teddy Halliden\n",
+        "Applied Time Series Analysis\n",
+        "\n",
+        "> \n",
+        "\n",
+        "May 14th, 2021"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "NCgbqetn6O5V"
       },
       "source": [
